--- a/lesson_5-5/less/main.css
+++ b/lesson_5-5/less/main.css
@@ -1,21 +1,30 @@
 /* fonts family */
 @font-face {
-  font-family: 'ProximaNova_reg';
-  src: url('../fonts/ProximaNova-Regular.eot');
-  src: url('../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/ProximaNova-Regular.woff2') format('woff2'), url('../fonts/ProximaNova-Regular.woff') format('woff'), url('../fonts/ProximaNova-Regular.ttf') format('truetype'), url('../fonts/ProximaNova-Regular.svg#ProximaNova-Regular') format('svg');
+  font-family: "ProximaNova_reg";
+  src: url("../fonts/ProximaNova-Regular.eot");
+  src: url("../fonts/ProximaNova-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/ProximaNova-Regular.woff2") format("woff2"),
+    url("../fonts/ProximaNova-Regular.woff") format("woff"),
+    url("../fonts/ProximaNova-Regular.ttf") format("truetype"),
+    url("../fonts/ProximaNova-Regular.svg#ProximaNova-Regular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'ProximaNova_bold';
-  src: url('../fonts/ProximaNova-Bold.eot');
-  src: url('../fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/ProximaNova-Bold.woff2') format('woff2'), url('../fonts/ProximaNova-Bold.woff') format('woff'), url('../fonts/ProximaNova-Bold.ttf') format('truetype'), url('../fonts/ProximaNova-Bold.svg#ProximaNova-Bold') format('svg');
+  font-family: "ProximaNova_bold";
+  src: url("../fonts/ProximaNova-Bold.eot");
+  src: url("../fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/ProximaNova-Bold.woff2") format("woff2"),
+    url("../fonts/ProximaNova-Bold.woff") format("woff"),
+    url("../fonts/ProximaNova-Bold.ttf") format("truetype"),
+    url("../fonts/ProximaNova-Bold.svg#ProximaNova-Bold") format("svg");
   font-weight: bold;
   font-style: normal;
 }
 /* colors */
 iframe {
-  width: 60rem;
+  width: 60rem !important;
   height: 30rem;
   border: none;
 }
@@ -24,7 +33,7 @@ html {
   font-size: 10px;
 }
 body {
-  font-family: 'ProximaNova_reg', sans-serif;
+  font-family: "ProximaNova_reg", sans-serif;
 }
 button:focus,
 input:focus,
@@ -64,7 +73,7 @@ a:hover {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   padding: 0.5rem;
-  font-family: 'ProximaNova_reg', sans-serif;
+  font-family: "ProximaNova_reg", sans-serif;
   font-size: 1.3rem;
   background-color: #fff;
 }
@@ -86,7 +95,7 @@ section {
   color: #fff;
 }
 .section-header h2 {
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   font-size: 3.6rem;
 }
 .section-header p {
@@ -123,7 +132,7 @@ section {
 }
 .main-content h1 {
   margin-bottom: 5rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   font-size: 4rem;
   line-height: 1.45;
   text-transform: uppercase;
@@ -142,14 +151,14 @@ section {
 }
 .main span strong {
   font-size: 3rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 .main-triger {
   display: block;
   margin-top: 3rem;
   font-size: 2.2rem;
   text-transform: uppercase;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 .main-form {
   padding: 4rem 5rem;
@@ -176,7 +185,7 @@ section {
 }
 .header .phone-link {
   display: inline-block;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   font-weight: 900;
   font-size: 2rem;
   height: 7rem;
@@ -198,7 +207,7 @@ section {
   text-align: center;
 }
 .features-block h3 {
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   font-size: 2rem;
   margin-bottom: 3rem;
 }
@@ -258,7 +267,7 @@ section {
 .price-block h4 {
   margin: 3rem 0 1rem;
   font-size: 1.9rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   min-height: 7rem;
 }
 .price-block img {
@@ -271,7 +280,7 @@ section {
   display: block;
   margin-bottom: 2rem;
   font-size: 1.9rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 .price-list {
   padding: 0;
@@ -281,7 +290,7 @@ section {
   line-height: 1.6rem;
 }
 .price-list li:before {
-  content: '';
+  content: "";
   display: inline-block;
   margin-right: 1rem;
   width: 1.4rem;
@@ -310,7 +319,7 @@ section {
   font-style: italic;
 }
 .feedback-text::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: -2rem;
@@ -332,7 +341,7 @@ section {
   font-size: 1.4rem;
 }
 .feedback-slider .media h4 {
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 .feedback-slider p {
   font-size: 1.6rem;
@@ -357,7 +366,7 @@ section {
 }
 .feedback-form h3 {
   margin-bottom: 1rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   font-size: 2rem;
 }
 .feedback-form label {
@@ -375,7 +384,8 @@ section {
 }
 /* Всплывающие окна */
 .scheme {
-  background: #fff url(../img/scheme/scheme-bg.png) bottom -10rem right -15rem no-repeat;
+  background: #fff url(../img/scheme/scheme-bg.png) bottom -10rem right -15rem
+    no-repeat;
   background-size: 65rem;
 }
 .scheme-block {
@@ -384,7 +394,7 @@ section {
 .scheme-block h3 {
   margin-top: 3rem;
   font-size: 2rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 .scheme-block p {
   font-size: 1.6rem;
@@ -399,7 +409,7 @@ section {
 .all-inclusive .media h4 {
   margin-left: 1rem;
   margin-top: 1.5rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   font-size: 1.6rem;
 }
 .all-inclusive .media p {
@@ -423,7 +433,7 @@ section {
   line-height: 4rem;
   padding: 0.3rem;
   color: #fff;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
   font-size: 1.9rem;
 }
 /* Развеем все опасения */
@@ -445,7 +455,7 @@ section {
 }
 .problems-list h4 {
   font-size: 2.1rem;
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 .problems-list ul {
   list-style: none;
@@ -459,7 +469,7 @@ section {
   font-size: 1.4rem;
 }
 .problems-list ul li:before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 50%;
@@ -552,7 +562,7 @@ section {
   background-size: cover;
 }
 .contacts h2 {
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 .contacts a {
   border-bottom: 1px dotted #1a1820;
@@ -567,7 +577,7 @@ section {
 }
 .contacts-form h2 {
   font-size: 1.9rem;
-  font-family: 'ProximaNova_reg', sans-serif;
+  font-family: "ProximaNova_reg", sans-serif;
   margin-bottom: 3rem;
 }
 /* Подвал */
@@ -636,7 +646,7 @@ footer .footer-dev-logo {
   text-align: center;
 }
 .popup-header {
-  font-family: 'ProximaNova_bold', sans-serif;
+  font-family: "ProximaNova_bold", sans-serif;
 }
 /* responsive */
 @media (max-width: 1199px) {
